python/testData/quickFixes/PyAddImportQuickFixTest/existingImportsAlwaysSuggestedFirstEvenIfNonProject/main.py
from datetime import time

print(time())
print(<error descr="Unresolved reference 'datetime'">date<caret>time</error>())